--- a/style.css
+++ b/style.css
@@ -79,6 +79,10 @@ body {
   text-transform: uppercase;
 }
 
+.sticky-top {
+  overflow: hidden;
+}
+
 .home {
   background-image: url(img/1.png);
   background-size: cover;
@@ -144,7 +148,8 @@ body {
   padding-bottom: 10rem;
 }
 
-.info h2 {
+.info h2,
+.story h2 {
   color: var(--pink);
   font-family: 'Sacramento';
   font-size: 5rem;
@@ -182,6 +187,158 @@ body {
   font-weight: 300;
 }
 
+.story {
+  padding-top: 10rem;
+  padding-bottom: 8rem;
+}
+
+.story span {
+  text-transform: uppercase;
+  color: #666;
+  font-size: 0.9rem;
+  letter-spacing: 1px;
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.story p {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.timeline {
+  list-style: none;
+  padding: 1.4rem 0;
+  margin-top: 1rem;
+  position: relative;
+}
+
+.timeline::before {
+  content: '';
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  width: 1px;
+  background-color: #ccc;
+  left: 50%;
+}
+
+.timeline li {
+  margin-bottom: 1.5rem;
+  position: relative;
+}
+
+.timeline li::before,
+.timeline li::after {
+  content: '';
+  display: table;
+}
+
+.timeline li::after {
+  clear: both;
+}
+
+.timeline li .timeline-image {
+  width: 160px;
+  height: 160px;
+  background-color: #ccc;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.timeline li .timeline-panel {
+  width: 40%;
+  float: left;
+  border: 1px solid #ccc;
+  padding: 2rem;
+  position: relative;
+  border-radius: 8px;
+  background-color: white;
+}
+
+.timeline li .timeline-panel::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  top: 85px;
+  right: -15px;
+}
+
+.timeline li .timeline-panel::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid white;
+  border-right: 0 solid white;
+  border-bottom: 14px solid transparent;
+  top: 86px;
+  right: -13px;
+}
+
+.timeline li.timeline-inverted .timeline-panel {
+  float: right;
+}
+
+.timeline li.timeline-inverted .timeline-panel::before {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -15px;
+  right: auto;
+  top: 100px;
+}
+
+.timeline li.timeline-inverted .timeline-panel::after {
+  border-left-width: 0;
+  border-right-width: 15px;
+  left: -13px;
+  right: auto;
+  top: 101px;
+}
+
+.timeline li .timeline-panel1 {
+  width: 40%;
+  float: left;
+  border: 1px solid #ccc;
+  padding: 2rem;
+  position: relative;
+  border-radius: 8px;
+  background-color: white;
+}
+
+.timeline li .timeline-panel1::before {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  border-top: 15px solid transparent;
+  border-left: 15px solid #ccc;
+  border-right: 0 solid #ccc;
+  border-bottom: 15px solid transparent;
+  top: 100px;
+  right: -15px;
+}
+
+.timeline li .timeline-panel1::after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  border-top: 14px solid transparent;
+  border-left: 14px solid white;
+  border-right: 0 solid white;
+  border-bottom: 14px solid transparent;
+  top: 101px;
+  right: -13px;
+}
+
 /* Responsive */
 /* Extra */
 @media (max-width: 1200px) {
@@ -203,6 +360,57 @@ body {
   .home .heart {
     display: none;
   }
+
+  .timeline::before {
+    left: 60px;
+  }
+
+  .timeline li .timeline-image {
+    left: 15px;
+    margin-left: 45px;
+    top: 16px;
+  }
+
+  .timeline li .timeline-panel {
+    width: calc(100% - 200px);
+    float: right;
+  }
+  .timeline li .timeline-image1 {
+    left: 15px;
+    margin-left: 45px;
+    top: 16px;
+  }
+
+  .timeline li .timeline-panel1 {
+    width: calc(100% - 200px);
+    float: right;
+  }
+
+  .timeline li .timeline-panel::before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+  .timeline li .timeline-panel::after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -13px;
+    right: auto;
+  }
+
+  .timeline li .timeline-panel1::before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+  }
+  .timeline li .timeline-panel1::after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -13px;
+    right: auto;
+  }
 }
 
 /* Tablet */
@@ -218,6 +426,11 @@ body {
     font-size: 2rem;
     text-align: center;
   }
+
+  .timeline li .timeline-image {
+    width: 140px;
+    height: 140px;
+  }
 }
 /* HP */
 @media (max-width: 576px) {
@@ -227,5 +440,43 @@ body {
   .simply-countdown > .simply-section {
     padding: 40px;
     margin: 3px;
+  }
+
+  .timeline li .timeline-image {
+    width: 85px;
+    height: 85px;
+  }
+
+  .timeline li .timeline-panel {
+    width: 65%;
+    transform: translateX(-10px);
+  }
+  .timeline li .timeline-panel1 {
+    width: 65%;
+    transform: translateX(-10px);
+  }
+
+  .timeline li .timeline-panel::before {
+    top: 55px;
+  }
+
+  .timeline li .timeline-panel::after {
+    top: 56px;
+  }
+
+  .timeline li .timeline-panel1::before {
+    top: 55px;
+  }
+
+  .timeline li .timeline-panel1::after {
+    top: 56px;
+  }
+
+  .timeline li.timeline-inverted .timeline-panel::before {
+    top: 55px;
+  }
+
+  .timeline li.timeline-inverted .timeline-panel::after {
+    top: 56px;
   }
 }
